src/errors/__snapshots__/error-reporter.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorReporter outputError ErrorWithLocation should output location of errors in human readable format 1`] = `
"main.ts:2:25 - some error

1 
2           const query = invalidQuery;
                          ~~~~~~~~~~~~
"
`;

exports[`ErrorReporter outputError ErrorWithLocation should output location of errors in human readable format with 2 lines 1`] = `
"main.ts:3:19 - some error

2           const query = gql\`;
3             query MyQuery {
                    ~~~~~~~~~
4               name
  ~~~~~~~~~~~~~~~~~~
5             }
"
`;

exports[`ErrorReporter outputError ErrorWithLocation should output location of errors in human readable format with 3 or more lines 1`] = `
"main.ts:3:19 - some error

2           const query = gql\`;
3             query MyQuery {
                    ~~~~~~~~~
4               id
  ~~~~~~~~~~~~~~~~
5               name
  ~~~~~~~~~~~~~~~~~~
6             }
"
`;

exports[`ErrorReporter outputError ErrorWithoutLocation should output error message 1`] = `"error: hoge"`;

exports[`ErrorReporter outputError ErrorWithoutLocation should output warn message 1`] = `"warn: hoge"`;
